manifests/golden2/mysql-1/gw-mysql-1.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: egress-mysql-1
  namespace: istio-egress
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls-port
      protocol: TLS
    hosts:
    - 'omega-mysql-1.omegaworld.net'
    tls:
      mode: ISTIO_MUTUAL
