manifests/golden2/mysql-1/dr-mysql-1.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: mysql-1
  namespace: istio-egress
spec:
  host: omega-mysql-1.omegaworld.net 
  subsets:
  - name: mysql-1-tcp
    trafficPolicy:
      outlierDetection:
        splitExternalLocalOriginErrors: true
        consecutiveLocalOriginFailures: 1
        consecutiveGatewayErrors: 1
        consecutive5xxErrors: 1
        interval: 5s
        baseEjectionTime: 5m
        maxEjectionPercent: 60
      loadBalancer:
        simple: LEAST_REQUEST
      connectionPool:
        tcp:
          maxConnections: 100
          connectTimeout: 10s
