manifests/golden2/mysql-1/se-mysql-1.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: mysql-1
  namespace: istio-egress
spec:
  hosts:
  - omega-mysql-1.omegaworld.net
  endpoints:
  - address: 192.168.0.115
  addresses:
  - 192.168.0.115/32
  ports:
  - number: 3306
    name: tcp-port-mesh
    protocol: TCP
  - number: 443
    name: tls-port-egress
    protocol: TLS
  resolution: STATIC
  location: MESH_EXTERNAL
