manifests/golden2/mysql-1/vs-mysql-1.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mysql-1
  namespace: istio-egress
spec:
  hosts:
  - omega-mysql-1.omegaworld.net
  gateways:
  - egress-mysql-1
  - mesh
  tcp:
  - match:
    - gateways:
      - mesh
      port: 3306
    route:
    - destination:
        host: istio-egressgateway.istio-egress.svc.cluster.local
        port:
          number: 443
        subset: mysql-1-tls
      weight: 100
  - match:
    - gateways:
      - egress-mysql-1
      port: 443
    route:
    - destination:
        host: omega-mysql-1.omegaworld.net
        port:
          number: 3306
        subset: mysql-1-tcp
      weight: 100
